<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <Button
        android:id="@+id/b4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/Serial" />

    <Button
        android:id="@+id/b5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/b4"
        android:layout_below="@+id/b4"
        android:text="@string/Msr" />

    <Button
        android:id="@+id/b6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/b5"
        android:layout_below="@+id/b5"
        android:text="@string/Pin" />

    <Button
        android:id="@+id/b7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/b6"
        android:layout_below="@+id/b6"
        android:text="@string/Emv" />

    <TextView
        android:id="@+id/t4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b4"
        android:layout_alignBottom="@+id/b4"
        android:layout_alignLeft="@+id/t6"
        android:layout_alignParentRight="true"
        android:text="@string/Vacio" />

    <TextView
        android:id="@+id/t5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b5"
        android:layout_alignBottom="@+id/b5"
        android:layout_alignLeft="@+id/t4"
        android:layout_alignParentRight="true"
        android:text="@string/Vacio" />

    <TextView
        android:id="@+id/t6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b6"
        android:layout_alignBottom="@+id/b6"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/b6"
        android:text="@string/Vacio" />

    <TextView
        android:id="@+id/t7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b7"
        android:layout_alignBottom="@+id/b7"
        android:layout_alignLeft="@+id/t6"
        android:layout_alignParentRight="true"
        android:text="@string/Vacio" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/Footer" />

    <Button
        android:id="@+id/b8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignRight="@+id/b7"
        android:layout_below="@+id/b7"
        android:text="@string/Emv2" />

    <TextView
        android:id="@+id/t8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b8"
        android:layout_alignBottom="@+id/b8"
        android:layout_alignLeft="@+id/t7"
        android:layout_alignParentRight="true"
        android:text="@string/Vacio" />

    <Button
        android:id="@+id/b9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/b8"
        android:layout_toLeftOf="@+id/t8"
        android:text="@string/Abort" />

    <TextView
        android:id="@+id/t9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b9"
        android:layout_alignBottom="@+id/b9"
        android:layout_alignLeft="@+id/t8"
        android:layout_alignParentRight="true"
        android:text="@string/Vacio" />

    <Button
        android:id="@+id/b10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/b9"
        android:text="@string/EndEmv" />

    <TextView
        android:id="@+id/t10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/b10"
        android:layout_alignBottom="@+id/b10"
        android:layout_alignParentRight="true"
        android:layout_toRightOf="@+id/b10"
        android:text="@string/Vacio" />

    <Button
        android:id="@+id/bIrPantalla2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footer"
        android:layout_centerHorizontal="true"
        android:text="@string/Pantalla2" />

</RelativeLayout>